--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "dotenv": "^16.0.2",
+    "@auth0/nextjs-auth0": "^1.9.1",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
