--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^1.9.1",
+    "mysql2": "^2.3.3",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
